5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3991/executions/1573_1328.log
== TEST (2019-03-12 16:39:44) 
-- CODE:
20 * 35
-- ERROR:
File "XXXX", line 7
    print(T - H = F)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:40:12) 
-- CODE:
print(20 * 35)
-- OUTPUT:
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 16:41:13) 
-- CODE:
print(20 * 35)
-- EXECUTION TIME:
0.141572
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
